[numenera] fix badge/tracker with dark mode

--- a/block-system-2.0/cypher/character-sheet/numenera.css
+++ b/block-system-2.0/cypher/character-sheet/numenera.css
@@ -1,4 +1,4 @@
- {
+{
   padding: 0px !important;
   font-family: Amarante Regular !important;
   font-weight: 400;
@@ -164,6 +164,8 @@
   color: #414E71;
   background-color: #00000010 !important;
   text-transform: uppercase}
-.CodeMirror-buttonsPanel button { background: #FCF8EF; color: 222222 }
+ .CodeMirror-buttonsPanel button { background: #FCF8EF; color: 222222}
  .table-striped tbody tr:nth-of-type(odd )
 { background-color: #00000010 !important}
+ .cypher-character-trackable div,  .cypher-character-trackable p,  .cypher-character-trackable span,  .cypher-character-trackable td { font-size:13px !important}
+ .cypher-character-trackable td { padding-left: 0px; padding-right: 0px;}
